--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "browserify": "9.0.3",
     "mocha": "*"
   },
-  "main": "./node.js",
+  "main": "./index.js",
   "browser": "./browser.js",
   "component": {
     "scripts": {
